--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,8 @@
 name = "photos-blog"
-type = "webpack"
 account_id = "3e196b8605fd883dfcee5cdb5dd106cc"
 workers_dev = false
 route = "photos.butou.ma/*"
-zone_id = "91c9f72bd0892e7ea92d21e3afb9e3b0"
-
+compatibility_date = "2023-11-21"
+main = "workers-site/index.js"
 [site]
 bucket = "./dist"
-entry-point = "workers-site"
